--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body {
 .navbar a:hover {
   color: #fff056;
 }
-a {
+.navbar a {
   display: block;
   text-decoration: none;
   text-transform: uppercase;
@@ -49,6 +49,9 @@ h1 {
 }
 h1 span {
   color: #e66465;
+}
+h4 {
+  margin: 0;
 }
 p {
   color: #191919;
@@ -97,4 +100,66 @@ section {
   margin-top: 100px;
   margin-left: 10%;
   padding-left: 50px;
+}
+
+.contact-banner {
+  background-image: url("images/bg-contact.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#contact {
+  height: 350px;
+  padding-bottom: 150px;
+  width: 100%;
+}
+.footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  line-height: 30px;
+  padding: 15px;
+  font-size: 15px;
+  background-color: #191919;
+  text-align: center;
+}
+.footer p {
+  color: #fff;
+}
+.footer a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+}
+.footer a:hover {
+  color: #fff056;
+}
+.contact {
+  padding-top: 20px;
+  padding-left: 30%;
+  position: relative;
+  width: 100%;
+}
+input[type="text"],
+select,
+textarea {
+  display: block;
+  width: 40%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+.button {
+  background: linear-gradient(45deg, #e66465, #9198e5);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.button:hover {
+  color: #222222;
 }
