--- a/assets/style.css
+++ b/assets/style.css
@@ -112,28 +112,6 @@ section {
   padding-bottom: 150px;
   width: 100%;
 }
-.footer {
-  position: relative;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  line-height: 30px;
-  padding: 15px;
-  font-size: 15px;
-  background-color: #191919;
-  text-align: center;
-}
-.footer p {
-  color: #fff;
-}
-.footer a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: white;
-}
-.footer a:hover {
-  color: #fff056;
-}
 .contact {
   padding-top: 20px;
   padding-left: 30%;
@@ -162,4 +140,29 @@ textarea {
 }
 .button:hover {
   color: #222222;
+}
+.footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  line-height: 30px;
+  padding: 15px;
+  font-size: 15px;
+  background-color: #191919;
+  text-align: center;
+}
+.footer p {
+  color: #fff;
+}
+.footer a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+}
+.footer a:hover {
+  color: #fff056;
+}
+.footer img {
+  size: 5px;
 }
